@@ -18,7 +18,7 @@
 <LI><A HREF="/control?op=CLIENT_RESTART">Restart<A> eLife Client</LI>
 <P>
 <LI><A HREF="/control?op=SHARE">Start sharing<A> eLife file system</LI>
-<LI><A HREF="/control?op=SHARE_STOP">Stop sharing<A> eLife file system</LI>
+<LI><A HREF="/control?op=STOP_SHARE">Stop sharing<A> eLife file system</LI>
 <P>
 <LI><A HREF="/control?op=LOGOUT">Logout<A> of the monitor application</LI>
 <P>
