@@ -1,7 +1,8 @@
-#Sun Dec 11 13:40:47 EST 2005
+#Sun Feb 28 18:35:39 EST 2010
 major_version=2
-minor_version=0
 port=8082
-eSmart_install=../server
+minor_version=0
+eSmart_install=../
+#The eLife installation path can be overridden using a property value; either a -D parameter to java or a VM argument
+#in an Eclipse launch configuration. eg.  -DeSmart_install="../server"
 app_name=eLife_monitor
-
