@@ -1,3 +1,10 @@
+2010/02/28
+Rewrote as a Restful interface for admin functions
+Incorporated WEBDAV to simplify access to eLife file system
+Incorporated an embedded web application to allow access to monitor functions without requiring the admin tool
+Brought java libs in line with eLife libs to simplify release process.
+
+
 2005/12/11
 Ensure script files are sent to the admin client in base 64 encoding.
 Support upload of base 64 encoded files, add the attribute BASE64=Y to the upload XML header.
